fix icon not showing on mobile

--- a/src/sass/_common/common.scss
+++ b/src/sass/_common/common.scss
@@ -600,7 +600,8 @@ ul.bullet.gr-row > li {
                 display: none;
             }
             &:after {
-                content: '';
+                content: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.836 10.87C2.632 11.056 2.316 11.04 2.13 10.836C1.944 10.632 1.96 10.316 2.164 10.13L7.664 5.13C7.854 4.957 8.146 4.957 8.336 5.13L13.836 10.13C14.041 10.316 14.056 10.632 13.87 10.836C13.684 11.041 13.368 11.056 13.164 10.87L8 6.176L2.836 10.87Z' fill='%23333333'/%3E%3C/svg%3E%0A");
+                height: initial;
             }
         }
     }
